# hello-world-api

./: Dockerfile  README.md  pyproject.toml
src/hello_world_proj/: main.py
