[tool.poetry]
name = "hello-world-proj"
version = "0.1.0"
description = "the Arezoo's first project"
authors = ["Arezoo"]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.7.3"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"

[tool.ruff]
line-length = 120
src = ["src"]
select = [
    "F", # Pyflakes
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "I", # Isort
    "N", # pep8-naming
    "UP", # pyupgrade
    "S", # flake8-bandit
    "BLE", # flake8-blind-except™
    "B", # flake8-bugbear
]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
